Add button:hover color

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ button {
   cursor: pointer;
 }
 
+button:hover {
+  background: lightgray;
+}
+
 .app {
   display: flex;
   flex-direction: column;
