Set the minimum width of the page to 768px.

--- a/static/index.css
+++ b/static/index.css
@@ -1,6 +1,10 @@
+html {
+  min-width: 768px;
+}
+
 body {
   font-family: Georgia, serif;
-  max-width: 800px;
+  max-width: 740px;
   margin: 0 auto;
 }
 
