--- a/css/p5-widget-codemirror-theme.css
+++ b/css/p5-widget-codemirror-theme.css
@@ -8,24 +8,23 @@
   --dark-blueish: #00A1D3;
 }
 
-.cm-s-p5-widget span { color: var(--dark-gray); }
+/* Commented out if ported */
 
-.cm-s-p5-widget span.cm-string { color: var(--dark-blueish); }
-.cm-s-p5-widget span.cm-string-2 { color: var(--dark-blueish); }
-/* ^ Ported */
+/* .cm-s-p5-widget span { color: var(--dark-gray); } */
 
-.cm-s-p5-widget span.cm-meta { color: var(--dark-gray); }
-.cm-s-p5-widget span.cm-keyword { line-height: 1em; color: var(--dark-brown); }
+/* .cm-s-p5-widget span.cm-meta { color: var(--dark-gray); } */
+/* .cm-s-p5-widget span.cm-keyword { line-height: 1em; color: var(--dark-brown); } */
 .cm-s-p5-widget span.cm-atom { color: var(--pinkish); }
-.cm-s-p5-widget span.cm-number { color: var(--pinkish); }
-.cm-s-p5-widget span.cm-def { color: var(--dark-blueish); }
-.cm-s-p5-widget span.cm-variable { color: var(--dark-blueish); }
-.cm-s-p5-widget span.cm-variable-2 { color: var(--almost-black); }
-.cm-s-p5-widget span.cm-variable-3 { color: var(--almost-black); }
+/* .cm-s-p5-widget span.cm-number { color: var(--pinkish); } */
+/* .cm-s-p5-widget span.cm-def { color: var(--dark-blueish); }
+.cm-s-p5-widget span.cm-variable { color: var(--dark-blueish); } */
+.cm-s-p5-widget span.cm-variable-2 { color: var(--almost-black); } /* ??? */
+.cm-s-p5-widget span.cm-variable-3 { color: var(--almost-black); } /* ??? */
 .cm-s-p5-widget span.cm-property { color: var(--almost-black); }
-.cm-s-p5-widget span.cm-operator { color: var(--light-brown); }
-.cm-s-p5-widget span.cm-comment { color: var(--light-gray); }
-
+.cm-s-p5-widget span.cm-operator { color: var(--light-brown); } /* ??? */
+/* .cm-s-p5-widget span.cm-comment { color: var(--light-gray); } */
+/* .cm-s-p5-widget span.cm-string { color: var(--dark-blueish); }
+.cm-s-p5-widget span.cm-string-2 { color: var(--dark-blueish); } */
 
 .cm-s-p5-widget span.cm-error { color: #f00; }
 
