--- a/css/p5-widget-codemirror-theme.css
+++ b/css/p5-widget-codemirror-theme.css
@@ -26,7 +26,7 @@
 /* .cm-s-p5-widget span.cm-string { color: var(--dark-blueish); }
 .cm-s-p5-widget span.cm-string-2 { color: var(--dark-blueish); } */
 
-.cm-s-p5-widget span.cm-error { color: #f00; }
+/* .cm-s-p5-widget span.cm-error { color: #f00; } */
 
 /* Adjusted slightly. */
 /* .cm-s-p5-widget .CodeMirror-activeline-background { background: #e8f2ff; }
