--- a/static/index.css
+++ b/static/index.css
@@ -19,12 +19,23 @@ body {
   margin: 0 auto;
 }
 
+  .full-screen {
+    max-width: 100%;
+    height: 95vh;
+    box-sizing: border-box;
+  }
+
 h1, h2, h3 {
   font-weight: normal;
 }
 
 a {
   color: inherit;
+}
+
+.hatnote {
+  display: inline-block;
+  padding: 0.5rem;
 }
 
 .button {
